Set right margin of tab to 0 to prevent unnecessary wrapping of nav bar.

--- a/www/styles/tabs.css
+++ b/www/styles/tabs.css
@@ -24,7 +24,8 @@
 
 #navbar ul 
 {
-	margin: 0 4.5em;
+	margin: 0 0 0 4.5em;
+	margin-right: 0;
 	padding: 0;
 	position: absolute;
 	bottom: -1px;
